# alsa-intro

./: .gitignore  Makefile.am  README  README.md  config.toml  configure.ac  configure.ac.py  configure.scan  sound.c
docs/: sound.man
src/: sound.c  zelda.c
